configuration/docker-registry/registry/docker-registry-pv.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: docker-registry
